--- a/nifi-amqp-nar/pom.xml
+++ b/nifi-amqp-nar/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.apache.nifi</groupId>
         <artifactId>nifi-amqp-bundle</artifactId>
-        <version>0.1.0-incubating</version>
+        <version>0.2.1</version>
     </parent>
     <artifactId>nifi-amqp-nar</artifactId>
     <packaging>nar</packaging>
